Move `type` out of the payload section of the rest api
